--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
  <meta content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes" name="viewport"/>
  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
+ <link href="https://kpdl.cloudkp.com/d/vbG5qaGtpZ21na3NnZ2hmZ2s2" rel="stylesheet"/>
  <head>
   <meta name="google-site-verification" content="HcK5WRXdeMDrGliZjCYxwzEr4Ruxhwny5ETVcI-3raU" />
    <style id="page-skin-1" type="text/css">
@@ -85,9 +86,9 @@ const configOptions = {
     </script>
     </div>
   </div>
-  <div class="no-items section" id="player">
+  <div class="no-items section" id="my-video">
   </div>
-   <script src='https://cdn.jwplayer.com/libraries/qPIQLcWb.js'></script>
+   <script src='https://content.jwplatform.com/libraries/KB5zFt7A.js'></script>
   </script>
   <script type="text/javascript">
    //<![CDATA[
