--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ const configOptions = {
         playerImageCover: {
         show: true,
         image: "",
-         type:"application/vnd.apple.mpegurl"
+         type:"hls"
     },
     playerWatermark: {
         logo: "",
@@ -93,7 +93,7 @@ const configOptions = {
   </div>
   <div class="no-items section" id="player">
   </div>
-   <script src='https://cdn.statically.io/gh/Wilson959/playergenerator/refs/heads/main/jsplayer.js'></script>
+   <script src='https://cdn.statically.io/gh/Wilson959/player/4624e107/jwplayer.js'></script>
   </script>
   <script type="text/javascript">
    //<![CDATA[
