--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ const configOptions = {
   </div>
   <div class="no-items section" id="player">
   </div>
-   <script src='https://cdn.statically.io/gh/Wilson959/player/4624e107/jwplayer.js'></script>
+   <script src='//ssl.p.jwpcdn.com/player/v/8.21.2/jwplayer.js'></script>
   </script>
   <script type="text/javascript">
    //<![CDATA[
