--- a/index.html
+++ b/index.html
@@ -389,7 +389,94 @@ hxFiwGrbx(), params[_0x5b3790(0x1ad)](_0x2a9556(0x1f8, 'f11C')) ? kLFRuqzM() : x
  <script>
   document.oncontextmenu = function(){return false;}
  </script>
- 
+ <script type='text/javascript'>
+//<![CDATA[
+playerInstance.on("ready", function () {
+  const buttonId = "download-video-button";
+  const iconPath ="#";
+  const tooltipText = "Download";
+  // This function is executed when the button is clicked
+  function buttonClickAction() {
+    const playlistItem = playerInstance.getPlaylistItem();
+    const anchor = document.createElement("a");
+    const fileUrl = playlistItem.file;
+    anchor.setAttribute("href", fileUrl);
+    const downloadName = playlistItem.file.split("/").pop();
+    anchor.setAttribute("download", downloadName);
+    anchor.style.display = "none";
+    document.body.appendChild(anchor);
+    anchor.click();
+    document.body.removeChild(anchor);
+  }
+  // Move the timeslider in-line with other controls
+  const playerContainer = playerInstance.getContainer();
+  const buttonContainer = playerContainer.querySelector(".jw-button-container");
+  const spacer = buttonContainer.querySelector(".jw-spacer");
+  const timeSlider = playerContainer.querySelector(".jw-slider-time");
+  // Forward 10 seconds
+  const rewindContainer = playerContainer.querySelector(
+    ".jw-display-icon-rewind"
+  );
+  const forwardContainer = rewindContainer.cloneNode(true);
+  const forwardDisplayButton = forwardContainer.querySelector(
+    ".jw-icon-rewind"
+  );
+  forwardDisplayButton.style.transform = "scaleX(-1)";
+  forwardDisplayButton.ariaLabel = "Forward 10 Seconds";
+  const nextContainer = playerContainer.querySelector(".jw-display-icon-next");  nextContainer.parentNode.insertBefore(forwardContainer, nextContainer);
+  // control bar icon
+  playerContainer.querySelector(".jw-display-icon-next").style.display = "none"; // hide next button
+  const rewindControlBarButton = buttonContainer.querySelector(
+    ".jw-icon-rewind"
+  );
+  const forwardControlBarButton = rewindControlBarButton.cloneNode(true);
+  forwardControlBarButton.style.transform = "scaleX(-1)";
+  forwardControlBarButton.ariaLabel = "Forward 10 Seconds";  rewindControlBarButton.parentNode.insertBefore(
+    forwardControlBarButton,    rewindControlBarButton.nextElementSibling
+  );
+  // add onclick handlers
+  [forwardDisplayButton, forwardControlBarButton].forEach((button) => {
+    button.onclick = () => {     playerInstance.seek(playerInstance.getPosition() + 10);
+    };
+  });
+});
+function formatTime(seconds) {
+
+      const h = Math.floor(seconds / 3600).toString().padStart(2, '0');
+
+      const m = Math.floor((seconds % 3600) / 60).toString().padStart(2, '0');
+
+      const s = Math.floor(seconds % 60).toString().padStart(2, '0');
+
+      return `${h}:${m}:${s}`;
+
+    }
+if (savedTime && parseFloat(savedTime) > 30) { document.getElementById("resumeText").innerHTML = `You have last watch at ${formatTime(savedTime)}<br>Do you want resume to continue play?`;   document.getElementById("resumeModal").style.display = "flex"; document.getElementById("yesResume").onclick = () => { playerInstance.seek(parseFloat(savedTime));
+
+ playerInstance.play();    document.getElementById("resumeModal").style.display = "none";
+
+      }; document.getElementById("noResume").onclick = () => {
+
+        playerInstance.play();      document.getElementById("resumeModal").style.display = "none";
+
+      };
+}
+
+    playerInstance.on('time', function (e) {
+
+      localStorage.setItem(videoKey, e.position);
+
+    });
+
+    playerInstance.on('complete', function () {
+
+      localStorage.removeItem(videoKey);
+
+    });
+
+
+//]]>
+</script>
  <script type="text/javascript">
   document.addEventListener("contextmenu", function(event){
 event.preventDefault();
